add_subdirectory(24-points)
add_subdirectory(choir)
add_subdirectory(count-of-char)
add_subdirectory(decimal-addition)
add_subdirectory(edit-distance)
add_subdirectory(length-of-last-string)
add_subdirectory(longest-common-subsequence)
add_subdirectory(longest-palindromic-substring)
add_subdirectory(longest-substring-without-repeating-characters)
add_subdirectory(maximum-sum-of-squares)
add_subdirectory(row-statistics)
add_subdirectory(shopping-list)
add_subdirectory(the-maze)
add_subdirectory(validate-ip-address)
add_subdirectory(wildcard-matching)
add_subdirectory(p122_best_time_to_buy_and_sell_stock_ii)
add_subdirectory(p135_candy)
add_subdirectory(p406_queue_reconstruction_by_height)
add_subdirectory(p435_non_overlapping_intervals)
add_subdirectory(p452_min_num_arrows)
add_subdirectory(p605_can_place_flowers)
add_subdirectory(p763_partition_labels)