add_subdirectory(24-points)
add_subdirectory(choir)
add_subdirectory(count-of-char)
add_subdirectory(decimal-addition)
add_subdirectory(edit-distance)
add_subdirectory(length-of-last-string)
add_subdirectory(longest-common-subsequence)
add_subdirectory(longest-palindromic-substring)
add_subdirectory(longest-substring-without-repeating-characters)
add_subdirectory(maximum-sum-of-squares)
add_subdirectory(row-statistics)
add_subdirectory(shopping-list)
add_subdirectory(the-maze)
add_subdirectory(validate-ip-address)
add_subdirectory(wildcard-matching)
add_subdirectory(p1_two_sum)
add_subdirectory(p4_median_of_two_sorted_arrays)
add_subdirectory(p34_find_first_and_last)
add_subdirectory(p46_permutations)
add_subdirectory(p51_n_queens)
add_subdirectory(p69_sqrt)
add_subdirectory(p75_sort_colors)
add_subdirectory(p76_minimum_window_substring)
add_subdirectory(p77_combinations)
add_subdirectory(p79_word_search)
add_subdirectory(p81_search_in_rotated_sorted_array_ii)
add_subdirectory(p88_merge_sorted_array)
add_subdirectory(p122_best_time_to_buy_and_sell_stock_ii)
add_subdirectory(p135_candy)
add_subdirectory(p142_linked_list_cycle_2)
add_subdirectory(p152_maximum_product_subarray)
add_subdirectory(p154_find_minimum_in_rotated_sorted_array_ii)
add_subdirectory(p165_compare_version_numbers)
add_subdirectory(p167_two_sum_ii)
add_subdirectory(p215_kth_largest_element_in_an_array)
add_subdirectory(p217_contains_duplicate)
add_subdirectory(p238_product_of_array_except_self)
add_subdirectory(p340_longest_k_unique_characters_substring)
add_subdirectory(p347_top_k_frequent_elements)
add_subdirectory(p406_queue_reconstruction_by_height)
add_subdirectory(p417_pacific_atlantic_water_flow)
add_subdirectory(p435_non_overlapping_intervals)
add_subdirectory(p451_sort_characters_by_frequency)
add_subdirectory(p452_min_num_arrows)
add_subdirectory(p524_longest_word)
add_subdirectory(p540_single_element_in_a_sorted_array)
add_subdirectory(p547_number_of_provinces)
add_subdirectory(p605_can_place_flowers)
add_subdirectory(p633_sum_of_square_numbers)
add_subdirectory(p665_non_decreasing_array)
add_subdirectory(p679_24_game)
add_subdirectory(p680_valid_palindrome_2)
add_subdirectory(p695_max_area_of_island)
add_subdirectory(p763_partition_labels)
add_subdirectory(p1111_delete_nodes_return_forest)
add_subdirectory(p1380_luck_nums_in_matrix)
add_subdirectory(p1605_find_valid_matrix_given_row_and_col_sums)
add_subdirectory(p1636_sort_array_by_increasing_frequency)
add_subdirectory(p1530_number_of_good_leaf_pairs)
add_subdirectory(p2976_minimum_cost_to_convert_string)
add_subdirectory(p3165_maximum_sum_of_subsequence_with_non_adj)